--- a/render.yaml
+++ b/render.yaml
@@ -15,7 +15,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: simple-chatroom
+          name: simple_chatroom
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
