--- a/render.yaml
+++ b/render.yaml
@@ -1,5 +1,5 @@
 databases:
-  - name: simple-chatroom
+  - name: simple_chatroom
     databaseName: simple_chatroom
     user: simple_chatroom
     plan: free
