--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 databases:
   - name: simple_chatroom
-    databaseName: simple_chatroom
+    databaseName: simple_chatroom_91pr
     user: simple_chatroom
     plan: free
 
@@ -15,7 +15,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: simple_chatroom
+          name: simple_chatroom_91pr
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
